# r-blog

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
content/: about.md  site.toml
content/posts/: 1post.md  cleanup.md  git-learning.md  testlatex.md  testpictures.md  testpost.md  use-worktree.md
crates/admin/: Cargo.toml
crates/admin/src/: main.rs
crates/blog-core/: Cargo.toml
crates/blog-core/src/: content.rs  lib.rs  render.rs
crates/sitegen/: Cargo.toml
crates/sitegen/src/: main.rs
public/: 404.html  index.html  search_index.json  styles.css
public/about/: index.html
public/posts/1post/: index.html
public/posts/cleanup/: index.html
public/posts/day20260613/: index.html
public/posts/day20260614/: index.html
public/posts/git-learning/: index.html
public/posts/locked-test/: index.html
public/posts/talk-to-myself/: index.html
public/posts/testlatex/: index.html
public/posts/testpictures/: index.html
public/posts/testpost/: index.html
public/posts/use-worktree/: index.html
